Add instructions and improve the measurement implementation.

--- a/src/index.html
+++ b/src/index.html
@@ -1,50 +1,288 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" type="text/css" href="style.css" />
-		<title>Heart Rate Monitor</title>
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1, user-scalable=no"
+		/>
+		<link rel="stylesheet" type="text/css" href="style.css" id="style" />
+		<title>💓 Heart Rate Monitor</title>
+		<style>
+			:root {
+				/* Variables for both color schemes */
+				--transition-duration: 0.2s;
+				--border-radius-small: 6px;
+				--border-radius-medium: 10px;
+				--border-radius-large: 15px;
+			}
+
+			:root {
+				--page-background: #111;
+				--page-color: #ddd;
+				--text-color-muted: #666;
+				--graph-background: transparent;
+				--graph-color: #f76;
+				--backdrop-background: rgba(0, 0, 0, 0.3);
+				--nav-item-background: #151515;
+			}
+
+			/* TODO: Finish light color schemea
+			@media (prefers-color-scheme: light) {
+				:root {
+					--page-background: #fff;
+					--page-color: #222;
+					--text-color-muted: #999;
+					--graph-background: #fff;
+					--graph-color: #f76;
+					--backdrop-background: rgba(200, 200, 200, 0.3);
+					--nav-item-background: #bbb;
+				}
+			}
+			*/
+		</style>
 	</head>
 	<body>
 		<div id="app">
-			<header>
-				<div>
-					<h1>Heart Rate Monitor</h1>
-					<small>Tap the circle to start / stop</small>
-				</div>
-			</header>
-
-			<main>
-				<section id="bpm-display-container" role="button">
-					<div id="bpm-display">
-						<div id="bpm-value"></div>
-						<label>bpm</label>
+			<div class="main-view">
+				<header>
+					<div>
+						<h1>Heart Rate Monitor</h1>
+						<small>Tap the circle to start / stop</small>
 					</div>
-				</section>
+				</header>
 
-				<secton id="graph-container">
-					<canvas id="graph-canvas"></canvas>
-				</secton>
-			</main>
+				<main>
+					<section id="bpm-display-container">
+						<div id="bpm-display">
+							<output id="bpm-value" title="Heart rate"></output>
+							<label>bpm</label>
+						</div>
+					</section>
 
-			<footer>
-				<!-- TODO: help button for instructions and maybe also some user options -->
-				<nav></nav>
-			</footer>
+					<section id="graph-container">
+						<canvas id="graph-canvas"></canvas>
+					</section>
+				</main>
 
-			<div class="debug-view">
-				<div class="feeds">
-					<video id="camera-feed" controls="true"></video>
-					<canvas
-						id="sampling-canvas"
-						width="400"
-						height="400"
-					></canvas>
+				<footer>
+					<button class="icon-button menu-toggle">
+						<span>Menu</span>
+					</button>
+					<nav class="menu" style="display: none">
+						<ul>
+							<li>
+								<a
+									href="#instructions"
+									data-modal-name="instructions"
+									>Instructions</a
+								>
+							</li>
+							<li>
+								<a href="#about" data-modal-name="about"
+									>About</a
+								>
+							</li>
+							<li class="debug-menu-item" style="display: none">
+								<a href="#about" data-modal-name="debug"
+									>Debug</a
+								>
+							</li>
+						</ul>
+					</nav>
+				</footer>
+			</div>
+
+			<div class="modal" data-name="instructions">
+				<div class="modal-box">
+					<div class="heading">
+						<h1>Instructions</h1>
+						<button class="icon-button close">
+							<span>Close</span>
+						</button>
+					</div>
+					<div class="content">
+						<h2>Measureing your heart rate</h2>
+						<p>
+							To measure your heart rate first place the tip of
+							your index finger on the back of your device so that
+							it covers both the camera and the flashlight. You
+							can then start the measurement by tapping the circle
+							at the center of the screen.
+						</p>
+
+						<h2>Tips</h2>
+						<p>
+							Keep your finger as still as possible as even slight
+							movements can disrupt the measurement. When the
+							graph is showing a distinct steady pattern of peaks
+							corresponding to your heart beats the measurement
+							should be accurate. If the graph is noisy or very
+							irregular you need to keep your finger more steady
+							or possibly adjust the way you're holding your
+							finger.
+						</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="modal" data-name="about">
+				<div class="modal-box">
+					<div class="heading">
+						<h1>About</h1>
+						<button class="icon-button close">
+							<span>Close</span>
+						</button>
+					</div>
+					<div class="content">
+						<h2>What is this?</h2>
+						<p>
+							This is an online heart rate monitor. It uses your
+							devices camera to measure your heart beat from your
+							finger tip. It works by measureing how much light is
+							reflected through your finger into the camera. As
+							your heart pumps blood through your finger the
+							brightness fluctuates with every beat, and that is
+							used to detect your heart rate.
+						</p>
+						<h2>Privacy</h2>
+						<p>
+							This app contains no analytics, tracking, adverts,
+							cookies or any other such things. No data is
+							collected.
+						</p>
+						<h2>Code</h2>
+						<p>
+							This project is open source software. For more info
+							<a
+								target="_blank"
+								href="https://github.com/richrd/heart-rate-monitor"
+								>check out the GitHub repository</a
+							>.
+						</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="modal" data-name="debug">
+				<div class="modal-box">
+					<div class="heading">
+						<h1>Debug</h1>
+						<button class="icon-button close">
+							<span>Close</span>
+						</button>
+					</div>
+					<div class="content">
+						<div class="debug-view">
+							<div class="feeds">
+								<video id="camera-feed"></video>
+								<canvas
+									id="sampling-canvas"
+									width="400"
+									height="400"
+								></canvas>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
 
 		<script src="main.js"></script>
+		<script>
+			function openModal(name) {
+				document
+					.querySelector(`.modal[data-name='${name}']`)
+					.classList.add("open");
+			}
+
+			function setupNav() {
+				document
+					.querySelector("button.menu-toggle")
+					.addEventListener("click", () => {
+						document
+							.querySelector("nav.menu")
+							.classList.toggle("open");
+					});
+				document.querySelectorAll("nav a").forEach((link) => {
+					link.addEventListener("click", (event) => {
+						event.preventDefault();
+						document
+							.querySelector("nav.menu")
+							.classList.toggle("open");
+
+						const modalName = event.target.getAttribute(
+							"data-modal-name"
+						);
+						openModal(modalName);
+					});
+				});
+			}
+
+			function setupModals() {
+				document.querySelectorAll(".modal").forEach((modal) => {
+					modal.addEventListener("click", (event) => {
+						if (event.originalTarget === modal) {
+							modal.classList.remove("open");
+						}
+					});
+					modal
+						.querySelector("button.close")
+						.addEventListener("click", () => {
+							modal.classList.remove("open");
+						});
+				});
+			}
+
+			document.addEventListener("DOMContentLoaded", function () {
+				setupNav();
+				setupModals();
+
+				// Allow setting various flags and options via the hash fragment
+				const hash = location.hash.length
+					? location.hash.substring(1)
+					: "";
+				const flags = hash.split(",");
+
+				// Debug mode
+				if (flags.includes("debug")) {
+					// Force refreshing CSS in debug mode
+					const style = document.getElementById("style");
+					style.setAttribute(
+						"href",
+						style.getAttribute("href") + "?" + Date.now()
+					);
+
+					document.querySelector(".debug-menu-item").style.display =
+						"block";
+				}
+
+				// Initialize the heart rate monitor
+				const bpmElement = document.getElementById("bpm-value");
+				heartRateMonitor.initialize({
+					videoElement: document.getElementById("camera-feed"),
+					samplingCanvas: document.getElementById("sampling-canvas"),
+					graphCanvas: document.getElementById("graph-canvas"),
+					graphColor: getComputedStyle(
+						document.documentElement
+					).getPropertyValue("--graph-color"),
+					graphWidth: 6,
+					onBpmChange: (bpm) => (bpmElement.innerText = bpm),
+				});
+
+				document
+					.getElementById("bpm-display-container")
+					.addEventListener(
+						"click",
+						heartRateMonitor.toggleMonitoring
+					);
+
+				document.documentElement.addEventListener("keyup", (event) => {
+					if (event.key === " ") {
+						heartRateMonitor.toggleMonitoring();
+					}
+				});
+			});
+		</script>
 	</body>
 </html>
