Log debug messages to debug modal element.

--- a/src/index.html
+++ b/src/index.html
@@ -182,6 +182,7 @@
 									height="400"
 								></canvas>
 							</div>
+							<div id="debug-log"></div>
 						</div>
 					</div>
 				</div>
