Add icon and manifest.

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1, user-scalable=no"
 		/>
+		<link rel="manifest" href="manifest.json" />
+		<link rel="icon" href="assets/icon512.png" />
 		<link rel="stylesheet" type="text/css" href="style.css" id="style" />
 		<title>💓 Heart Rate Monitor</title>
 		<style>
